--- a/lib/liblzma/Makefile
+++ b/lib/liblzma/Makefile
@@ -21,50 +21,50 @@ LZMAINCSDIR=	${INCLUDEDIR}/lzma
 INCSGROUPS=	MAININCS LZMAINCS
 
 .PATH: ${LZMADIR}/../common
-SRCS+=	tuklib_physmem.c tuklib_cpucores.c
+SRCS+=	tuklib_physmem.c
 
 .PATH: ${LZMADIR}/common
-SRCS+=	common.c \
-	block_util.c \
-	easy_preset.c \
-	filter_common.c \
-	hardware_physmem.c \
-	hardware_cputhreads.c \
-	index.c \
-	stream_flags_common.c \
-	vli_size.c \
+SRCS+=	alone_decoder.c \
 	alone_encoder.c \
-	block_buffer_encoder.c \
-	block_encoder.c \
-	block_header_encoder.c \
-	easy_buffer_encoder.c \
-	easy_encoder.c \
-	easy_encoder_memusage.c \
-	filter_buffer_encoder.c \
-	filter_encoder.c \
-	filter_flags_encoder.c \
-	index_encoder.c \
-	stream_buffer_encoder.c \
-	stream_encoder.c \
-	stream_flags_encoder.c \
-	vli_encoder.c \
-	alone_decoder.c \
 	auto_decoder.c \
 	block_buffer_decoder.c \
+	block_buffer_encoder.c \
 	block_decoder.c \
+	block_encoder.c \
 	block_header_decoder.c \
+	block_header_encoder.c \
+	block_util.c \
+	common.c \
+	easy_buffer_encoder.c \
 	easy_decoder_memusage.c \
+	easy_encoder.c \
+	easy_encoder_memusage.c \
+	easy_preset.c \
 	filter_buffer_decoder.c \
+	filter_buffer_encoder.c \
+	filter_common.c \
 	filter_decoder.c \
+	filter_encoder.c \
 	filter_flags_decoder.c \
+	filter_flags_encoder.c \
+	hardware_physmem.c \
+	index.c \
 	index_decoder.c \
+	index_encoder.c \
 	index_hash.c \
 	stream_buffer_decoder.c \
+	stream_buffer_encoder.c \
 	stream_decoder.c \
+	stream_encoder.c \
+	stream_flags_common.c \
 	stream_flags_decoder.c \
-	stream_encoder_mt.c \
+	stream_flags_encoder.c \
 	vli_decoder.c \
-	outqueue.c
+	vli_encoder.c \
+	vli_size.c
+
+# only for multi-threaded version (used directly in usr.bin/xz)
+#SRCS+= tuklib_cpucores.c hardware_cputhreads.c outqueue.c stream_encoder_mt.c
 
 .PATH: ${LZMADIR}/check
 SRCS+=	check.c \
@@ -76,38 +76,38 @@ SRCS+=	check.c \
 SRCS+=	crc32_fast.c crc64_fast.c
 
 .PATH: ${LZMADIR}/lz
-SRCS+=	lz_encoder.c \
-	lz_encoder_mf.c \
-	lz_decoder.c
+SRCS+=	lz_decoder.c \
+	lz_encoder.c \
+	lz_encoder_mf.c
 
 .PATH: ${LZMADIR}/lzma
-SRCS+=	lzma_encoder.c \
+SRCS+=	fastpos_table.c \
+	lzma_decoder.c \
+	lzma_encoder.c \
 	lzma_encoder_presets.c \
 	lzma_encoder_optimum_fast.c \
 	lzma_encoder_optimum_normal.c \
-	fastpos_table.c \
-	lzma_decoder.c \
-	lzma2_encoder.c \
-	lzma2_decoder.c
+	lzma2_decoder.c \
+	lzma2_encoder.c
 
 .PATH: ${LZMADIR}/rangecoder
 SRCS+=	price_table.c
 
 .PATH: ${LZMADIR}/delta
 SRCS+=	delta_common.c \
-	delta_encoder.c \
-	delta_decoder.c
+	delta_decoder.c \
+	delta_encoder.c
 
 .PATH: ${LZMADIR}/simple
 SRCS+=	simple_coder.c \
-	simple_encoder.c \
 	simple_decoder.c \
-	x86.c \
-	powerpc.c \
-	ia64.c \
+	simple_encoder.c \
 	arm.c \
 	armthumb.c \
-	sparc.c
+	ia64.c \
+	powerpc.c \
+	sparc.c \
+	x86.c
 
 WARNS?=	3
 
@@ -125,8 +125,5 @@ CFLAGS+= -DHAVE_CONFIG_H -DTUKLIB_SYMBOL_PREFIX=lzma_ \
 
 VERSION_DEF=	${.CURDIR}/Versions.def
 SYMBOL_MAPS=	${.CURDIR}/Symbol.map
-
-LDADD=	-lpthread
-DPADD=	${LIBPTHREAD}
 
 .include <bsd.lib.mk>
