unzip(1): Add missing dependencies.
Satisfies NOSHARED build after libarchive update.

--- a/usr.bin/unzip/Makefile
+++ b/usr.bin/unzip/Makefile
@@ -1,8 +1,12 @@
 # $FreeBSD: head/usr.bin/unzip/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=	unzip
-CSTD=	c99
-LDADD=	-larchive -lbz2 -lz
-DPADD=	${LIBARCHIVE} ${LIBBZ2} ${LIBZ}
+LDADD=	-larchive
+DPADD=	${LIBARCHIVE}
+
+# for static libarchive.a
+DPADD+=		${LIBBZ2} ${LIBZ} ${{LIBCRYPTO}
+LDADD+=		-lbz2 -lz -lprivate_crypto
+LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
 .include <bsd.prog.mk>
