ldns: Adjust makefiles for ldns-1.7.0 update.
Several changes:
 * move ldns.h to contrib
 * use single config.h
 * convert ldns headers to private (ldns is a private base lib)
 * bump soname for api changesmi, use shpub
 * add missing deps on librecrypto.so
 * update READMES

Currently only user of the libprivate_ldns is drill(1).
OpenSSH will be adjusted to use this lib next.

--- a/lib/libldns/Makefile
+++ b/lib/libldns/Makefile
@@ -3,22 +3,23 @@
 LDNS=		${.CURDIR}/../../contrib/ldns
 
 LIB=		private_ldns
-SHLIB_MAJOR=	1
-PRIVATELIB=
+SHLIB_MAJOR=	2
+PRIVATELIB=	shpub
 
 NO_STRICT_ALIASING=
 
-SRCS  =		rdata.c util.c rr.c packet.c wire2host.c \
-		host2str.c buffer.c str2host.c tsig.c resolver.c \
-		net.c host2wire.c dname.c dnssec.c dnssec_verify.c \
-		keys.c higher.c rr_functions.c parse.c update.c \
-		error.c zone.c dnssec_zone.c dnssec_sign.c rbtree.c \
-		sha1.c sha2.c
+SRCS+=		buffer.c dname.c dnssec.c dnssec_verify.c dnssec_zone.c \
+		error.c higher.c host2str.c host2wire.c keys.c net.c \
+		packet.c parse.c rbtree.c rdata.c resolver.c \
+		rr.c rr_functions.c sha1.c sha2.c \
+		str2host.c tsig.c util.c wire2host.c zone.c
+# not needed in base but included:
+SRCS+=		dane.c dnssec_sign.c duration.c radix.c update.c
 
-SRCS+=		b32_ntop.c b32_pton.c b64_ntop.c b64_pton.c
+SRCS+=		b64_ntop.c b64_pton.c
 
-INCSDIR=	${INCLUDEDIR}/ldns
-INCS=		common.h ldns.h net.h util.h
+INCSDIR=	${INCLUDEDIR}/priv/ldns
+INCS=		common.h net.h util.h
 INCS+=		buffer.h \
 		dane.h \
 		dname.h \
@@ -32,8 +33,10 @@ INCS+=		buffer.h \
 		host2str.h \
 		host2wire.h \
 		keys.h \
+		ldns.h \
 		packet.h\
 		parse.h \
+		radix.h \
 		rbtree.h \
 		rdata.h \
 		resolver.h \
@@ -50,7 +53,11 @@ INCS+=		buffer.h \
 .PATH:		${LDNS} ${LDNS}/compat ${LDNS}/ldns ${.CURDIR}/ldns
 
 CFLAGS+= 	-I${.CURDIR} -I${LDNS}
+
+LDADD=		-lprivate_crypto
+DPADD=		${LIBCRYPTO}
 CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
+LDFLAGS+=       -rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
 
 WARNS?=		2
 
