gcc80: Make LTO plugins installation consistent.
Previously my LTO additions were (ab)using bug in bsd.lib.mk.
All other cases in world override both variables.
Do the same fix for gcc47 too.

No functional change intended.

--- a/gnu/usr.bin/cc80/support-libs/liblto_plugin/Makefile
+++ b/gnu/usr.bin/cc80/support-libs/liblto_plugin/Makefile
@@ -25,6 +25,7 @@ NOINSTALLLIB=	yes
 LIBMODE=	555
 
 # GCC driver looks for LTO plugin library in libexec, not lib
+TARGET_LIBDIR=		/usr/libexec/gcc80
 TARGET_SHLIBDIR=	/usr/libexec/gcc80
 
 # Plugin support file locations
