lib/libcrypt: Add missing functions.
Taken-from: NetBSD

--- a/lib/libcrypt/Makefile
+++ b/lib/libcrypt/Makefile
@@ -8,7 +8,7 @@ SHLIBDIR?=	/lib
 
 .PATH:		${.CURDIR}/../libmd
 SRCS=		blowfish.c crypt.c crypt-blowfish.c crypt-des.c crypt-md5.c \
-		crypt-sha256.c crypt-sha512.c \
+		crypt-sha256.c crypt-sha512.c crypt-xsi.c \
 		deprecated-crypt-sha256.c deprecated-crypt-sha512.c \
 		md5c.c misc.c
 WARNS?=		2
@@ -16,6 +16,7 @@ NO_STRICT_ALIASING=
 
 MAN=		crypt.3
 MLINKS=		crypt.3 crypt_get_format.3 crypt.3 crypt_set_format.3
+MLINKS+=	crypt.3 encrypt.3 crypt.3 setkey.3
 CFLAGS+=	-I${.CURDIR}/../libmd -I${.CURDIR}/../libutil
 CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 CFLAGS+=	-D_CTYPE_H_DISABLE_MACROS_ 
