cpdup(1): Convert to LibreSSL MD5 hash API.
While there, simplify crunchgen by excluding md5 functionality in
rescue tools as in btools.

--- a/bin/cpdup/Makefile
+++ b/bin/cpdup/Makefile
@@ -2,23 +2,21 @@ PROG=	cpdup
 SRCS=	cpdup.c hcproto.c hclink.c misc.c fsmid.c
 
 .if defined(.FreeBSD)
-CFLAGS += -D_ST_FLAGS_PRESENT_=1
+CFLAGS += -D_ST_FLAGS_PRESENT_=1 -DWITH_LIBMD
 WARNS?=	6
 .endif
 
-.if defined(BOOTSTRAPPING)
+.if defined(BOOTSTRAPPING) || defined(RESCUE)
 # For boostrapping buildworld the md5 functionality is not needed
 CFLAGS+=-DNOMD5
 .else
 .if !defined(NOMD5)
 SRCS+=	md5.c
+CFLAGS+=	${PRIVATELIB_CFLAGS}
+DPADD=		${LIBCRYPTO}
+LDADD=		-lprivate_crypto
+LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 .endif
-
-# XXX sys/md5.h shim errata for bootstrap REMOVE_OPENSSL_FILES
-CFLAGS+= -I${_SHLIBDIRPREFIX}/usr/include/priv
-
-LDADD+= -lmd
-DPADD+= ${LIBMD}
 .endif
 
 .include <bsd.prog.mk>
