--- a/sbin/iscontrol/Makefile
+++ b/sbin/iscontrol/Makefile
@@ -2,10 +2,10 @@
 
 SRCS= iscontrol.c pdu.c fsm.c config.c login.c auth_subr.c misc.c
 PROG= iscontrol
-DPADD= ${LIBCAM} ${LIBMD} ${LIBCRYPTO}
-LDADD= -lcam -lmd -lprivate_crypto
+CFLAGS+=	${PRIVATELIB_CFLAGS}
+DPADD=		${LIBCAM} ${LIBCRYPTO}
+LDADD=		-lcam -lprivate_crypto
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 
 CFLAGS += -I${.CURDIR}/../../sys/dev/disk/iscsi/initiator
 #CFLAGS += -g -DDEBUG
