ping6(8): Convert to LibreSSL MD5 hash API.

--- a/sbin/ping6/Makefile
+++ b/sbin/ping6/Makefile
@@ -8,10 +8,10 @@ CFLAGS+=-DINET6 -DHAVE_POLL_H -DHAVE_ARC4RANDOM -DUSE_RFC3542
 BINOWN=	root
 BINMODE=4555
 
-LDADD=	-lm -lmd -lprivate_crypto
-DPADD=	${LIBM} ${LIBMD} ${LIBCRYPTO}
+CFLAGS+=	${PRIVATELIB_CFLAGS}
+DPADD=		${LIBM} ${LIBCRYPTO}
+LDADD=		-lm -lprivate_crypto
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 NO_STRICT_ALIASING=
 
 # kame scopeid hack
