--- a/initrd/rescue.libcrypto/Makefile
+++ b/initrd/rescue.libcrypto/Makefile
@@ -68,12 +68,11 @@ CRUNCH_LIBS+= -lbz2  # cpio, tar
 CRUNCH_LIBS+= -lprivate_ncurses -lcrypt  # telnet
 CRUNCH_LIBS+= -lprivate_ssl  # fetch, wpa_supplicant
 CRUNCH_LIBS+= -lprivate_ssh  # ssh
-CRUNCH_LIBS+= -lprivate_crypto
-CRUNCH_LIBS+= -lmd  # cpio, md5, ping6, tar
+CRUNCH_LIBS+= -lprivate_crypto # cpio, hammer2, md5, ping6, tar
 CRUNCH_LIBS+= -lutil
 CRUNCH_LIBS+= -lz  # cpio, ssh, tar
 CRUNCH_LIBS+= -lm  # hammer, hammer2, ping6
-CRUNCH_LIBS+= -lpthread
+CRUNCH_LIBS+= -lpthread  # hammer2
 CRUNCH_LINKOPTS+= ${PRIVATELIB_LDFLAGS}
 
 .include <bsd.crunchgen.mk>
