--- a/libexec/ssh-pkcs11-helper/Makefile
+++ b/libexec/ssh-pkcs11-helper/Makefile
@@ -1,5 +1,7 @@
 PROG=	ssh-pkcs11-helper
-SRCS=	ssh-pkcs11-helper.c ssh-pkcs11.c
+SRCS=	ssh-pkcs11-helper.c
+# disabled:
+#SRCS+=	ssh-pkcs11.c
 MAN=	ssh-pkcs11-helper.8
 
 WARNS=	3
