--- a/usr.bin/sftp/Makefile
+++ b/usr.bin/sftp/Makefile
@@ -1,11 +1,9 @@
 # $FreeBSD: src/secure/usr.bin/sftp/Makefile,v 1.1.2.3 2002/07/03 22:20:30 des Exp $
 
 PROG=	sftp
-SRCS=	progressmeter.c sftp.c sftp-client.c sftp-common.c sftp-glob.c
+SRCS=	sftp.c
+SRCS+=	progressmeter.c sftp-client.c sftp-common.c sftp-glob.c
 WARNS?=	3
-
-# Portability layer
-SRCS+=	fmt_scaled.c
 
 DPADD+=	${LIBEDIT} ${LIBNCURSES}
 LDADD+=	-lprivate_edit -lprivate_ncurses
