sshd(8): Remove not needed dependencies.
The tcp_wrappers support in OpenSSH was removed back in 2014.
The libopie is not needed, same for libpthread.

Tested-with: make buildworld -DNOSHARED -DREALLY_NOSHARED

--- a/usr.sbin/sshd/Makefile
+++ b/usr.sbin/sshd/Makefile
@@ -22,11 +22,8 @@ MAN=	sshd.8 sshd_config.5
 CFLAGS+= -DUSE_PAM
 #CFLAGS+= -DHAVE_SECURITY_PAM_APPL_H -DHAVE_PAM_GETENVLIST -DHAVE_PAM_PUTENV
 
-LDADD+=	-lopie
-DPADD+=	${LIBOPIE}
-
-LDADD+=	-lcrypt -lwrap ${MINUSLPAM}
-DPADD+=	${LIBCRYPT} ${LIBWRAP} ${LIBPAM}
+LDADD+=	-lcrypt ${MINUSLPAM}
+DPADD+=	${LIBCRYPT} ${LIBPAM}
 
 .include "../../Makefile.ssh.common"
 .include <bsd.prog.mk>
