--- a/Makefile.ssh.common
+++ b/Makefile.ssh.common
@@ -19,8 +19,8 @@ CFLAGS+=	-I${SSHC_SYSDIR}/crypto/libressl/include
 CFLAGS+=	-I${SSHC_SYSDIR}/lib/libssh -I${SSHDIR}
 
 .if ${.CURDIR:T} != "libssh"
-DPADD+=		${LIBSSH} ${LIBCRYPTO} ${LIBUTIL} ${LIBZ} ${LIBPTHREAD}
-LDADD+=		-lprivate_ssh -lprivate_crypto -lutil -lz -lpthread
+DPADD+=		${LIBSSH} ${LIBCRYPTO} ${LIBUTIL} ${LIBZ}
+LDADD+=		-lprivate_ssh -lprivate_crypto -lutil -lz
 LDFLAGS+=	-rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
 .endif
 
