--- a/libexec/ssh-pkcs11-helper/Makefile
+++ b/libexec/ssh-pkcs11-helper/Makefile
@@ -1,3 +1,5 @@
+.PATH: ${.CURDIR}/../../crypto/openssh
+
 PROG=	ssh-pkcs11-helper
 SRCS=	ssh-pkcs11-helper.c
 # disabled:
@@ -6,5 +8,12 @@ MAN=	ssh-pkcs11-helper.8
 
 WARNS=	3
 
-.include "../../Makefile.ssh.common"
+.PATH: ${.CURDIR}/../../crypto/openssh
+
+CFLAGS+=	-I${.CURDIR}/../../lib/libssh -I${.CURDIR}/../../crypto/openssh
+CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
+DPADD=		${LIBSSH} ${LIBCRYPTO} ${LIBUTIL} ${LIBZ}
+LDADD=		-lprivate_ssh -lprivate_crypto -lutil -lz
+LDFLAGS+=	-rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
+
 .include <bsd.prog.mk>
