--- a/usr.bin/ssh/Makefile
+++ b/usr.bin/ssh/Makefile
@@ -1,4 +1,5 @@
 # $FreeBSD: src/secure/usr.bin/ssh/Makefile,v 1.4.2.8 2003/02/03 17:31:12 des Exp $
+.PATH: ${.CURDIR}/../../crypto/openssh
 
 PROG=	ssh
 LINKS=	${BINDIR}/ssh ${BINDIR}/slogin
@@ -10,5 +11,14 @@ SRCS=	ssh.c
 SRCS+=	clientloop.c mux.c readconf.c \
 	sshconnect.c sshconnect2.c sshtty.c
 
-.include "../../Makefile.ssh.common"
+.if defined(XAUTH_PATH)
+CFLAGS+= -DXAUTH_PATH=\"${XAUTH_PATH}\"
+.endif
+
+CFLAGS+=	-I${.CURDIR}/../../lib/libssh -I${.CURDIR}/../../crypto/openssh
+CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
+DPADD=		${LIBSSH} ${LIBCRYPTO} ${LIBUTIL} ${LIBZ}
+LDADD=		-lprivate_ssh -lprivate_crypto -lutil -lz
+LDFLAGS+=	-rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
+
 .include <bsd.prog.mk>
