--- a/usr.bin/ssh-add/Makefile
+++ b/usr.bin/ssh-add/Makefile
@@ -1,8 +1,13 @@
 # $FreeBSD: src/secure/usr.bin/ssh-add/Makefile,v 1.2.2.3 2002/07/03 22:20:31 des Exp $
-# $DragonFly: src/secure/usr.bin/ssh-add/Makefile,v 1.3 2004/07/31 19:03:01 geekgod Exp $
+.PATH: ${.CURDIR}/../../crypto/openssh
 
 PROG=	ssh-add
 WARNS?=	3
 
-.include "../../Makefile.ssh.common"
+CFLAGS+=	-I${.CURDIR}/../../lib/libssh -I${.CURDIR}/../../crypto/openssh
+CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
+DPADD=		${LIBSSH} ${LIBCRYPTO} ${LIBUTIL} ${LIBZ}
+LDADD=		-lprivate_ssh -lprivate_crypto -lutil -lz
+LDFLAGS+=	-rpath /usr/lib/priv ${PRIVATELIB_LDFLAGS}
+
 .include <bsd.prog.mk>
