share/examples: Install missing defaults for ssl and ssh.
This would help with config updates merging and local system recovery
when configs in /etc get accidentally deleted or broken beyond repair.

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -178,6 +178,10 @@
             etc
                 defaults
                 ..
+                ssh
+                ..
+                ssl
+                ..
             ..
             find_interface
             ..
