libssh: Bump shlib version for api change.
The private libssh does not install any headers. Make it shpub.
There are few issues that need to be addressed later on.
For now just document its dependency on libutil, adjust order.
The libprivate_ssh.so must be built before libpam shared modules.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1045,7 +1045,7 @@ _prebuild_libs+=	lib/librecrypto lib/libressl
 lib/libressl__L: lib/librecrypto__L
 
 _prebuild_libs+=	lib/libssh
-lib/libssh__L: lib/librecrypto__L lib/libz__L
+lib/libssh__L: lib/librecrypto__L lib/libutil__L lib/libz__L
 
 _prebuild_libs+=	lib/libradius lib/libopie
 lib/libradius__L: lib/librecrypto__L
