--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3636,6 +3636,7 @@ TO_REMOVE+=/usr/include/priv/openssl/krb5_asn.h
 TO_REMOVE+=/usr/include/priv/openssl/ui_compat.h
 TO_REMOVE+=/usr/include/ldns
 TO_REMOVE+=/usr/lib/priv/libprivate_ldns.so.1
+TO_REMOVE+=/usr/lib/priv/libprivate_ssh.so.4
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
