--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3518,6 +3518,10 @@ TO_REMOVE+=/usr/share/man/man9/callout_stop_sync.9.gz
 TO_REMOVE+=/usr/include/sys/termios.h
 TO_REMOVE+=/usr/share/zoneinfo/Etc/UCT
 TO_REMOVE+=/usr/share/man/man3/sha384.3.gz
+TO_REMOVE+=/usr/bin/catman
+TO_REMOVE+=/usr/libexec/catman.local
+TO_REMOVE+=/usr/share/man/man1/catman.1.gz
+TO_REMOVE+=/usr/share/man/man8/catman.local.8.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
